# test_web

./: .gitignore  index.html  styles.css
Case 1/: q_table_taxi.npy  taxi_q_learning.py
Case 2/rl_curso/scripts/: eval_sac.sh  plot_metrics.sh
Case 2/rl_curso/src/robot_description/: setup.py
Case 2/rl_curso/src/robot_description/launch/: display.launch.py
Case 2/rl_curso/src/robot_gazebo/: package.xml
Case 2/rl_curso/src/robot_gazebo/launch/: racetrack.launch.py  small_house.launch.py
Case 2/rl_curso/src/robot_gazebo/scripts/: teleop
Case 2/rl_curso/src/robot_gazebo/worlds/: racetrack_day.world
Case 2/rl_curso/src/robot_navigation/: package.xml
Case 2/rl_curso/src/robot_navigation/params/: ros.yaml
Case 2/rl_curso/src/robot_navigation/resource/: robot_navigation
Case 2/rl_curso/src/robot_navigation/robot_navigation/envs/: indoor_env.py  indoor_rewards.py  utils.py
Case 2/rl_curso/src/robot_navigation/robot_navigation/scripts/: callbacks.py
Case 2/rl_tutorial/scripts/: train_sac.sh
Case 2/rl_tutorial/src/robot_gazebo/launch/: bookstore.launch.py
Case 2/rl_tutorial/src/robot_navigation/params/: small_house_config_test.yaml  small_house_config_train.yaml  small_house_starts_train.yaml
Case2/rl_curso/scripts/: install_requeriments.sh
Case2/rl_curso/src/robot_description/: package.xml
Case2/rl_curso/src/robot_gazebo/: setup.py
Case2/rl_curso/src/robot_gazebo/worlds/: bookstore.world  hospital.world  small_house.world
Case2/rl_curso/src/robot_navigation/: setup.py
docs/: index.html  styles.css
(+33 files in other folders)
